--- a/config/database.yml
+++ b/config/database.yml
@@ -13,19 +13,20 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: 5
-  username: daewon
-  password: 
-  socket: /var/run/mysqld/mysqld.sock
+  username: root
+  password:
+  host: localhost
 
 development:
   <<: *default
-  database: platy_development
+  database: detailbe_development
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: platy_test
+  database: detailbe_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -48,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: platy_production
-  username: platy
-  password: <%= ENV['PLATY_DATABASE_PASSWORD'] %>
+  database: detailbe_production
+  username: detailbe
+  password: <%= ENV['DETAILBE_DATABASE_PASSWORD'] %>
